// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BarChart input format error 1`] = `
<svg
  className="sc-jKJlTe krfdoq sc-jzJRlG crNCsf"
  height={320}
  transform={null}
  width={960}
>
  <rect
    className="background"
    height={320}
    width={960}
  />
  <text>
    Input Data Format Error
  </text>
  <g
    className="xaxis-sc-cSHVUG jPaNRJ"
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    style={Object {}}
    textAnchor="middle"
    transform="translate(0,320)"
  >
    <text
      className="axisName"
      style={Object {}}
      transform="translate(480, 30)"
    />
    <path
      className="domain"
      d="M0.5,0V0.5H960.5V0"
      stroke="#000"
      style={Object {}}
    />
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(480.5,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      />
    </g>
  </g>
  <g
    className="yaxis-sc-kAzzGY lflFOU"
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    style={Object {}}
    textAnchor="end"
    transform={null}
  >
    <text
      className="axisName"
      style={Object {}}
      transform="translate(-25, 160) rotate(270)"
    />
    <path
      className="domain"
      d="M0,320.5H0.5V0.5H0"
      stroke="#000"
      style={Object {}}
    />
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,320.5)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        0
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,253.83333333333331)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        10
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,187.16666666666666)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        20
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,120.5)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        30
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,53.833333333333314)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        40
      </text>
    </g>
  </g>
</svg>
`;

exports[`Storyshots BarChart standard 1`] = `
<svg
  className="sc-jKJlTe krfdoq sc-jzJRlG crNCsf"
  height={320}
  transform={null}
  width={960}
>
  <rect
    className="background"
    height={320}
    width={960}
  />
  <g
    className="bargroup-sc-kpOJdX hSoxZl"
    transform="translate(-10,0)"
  >
    <rect
      height={200}
      width={20}
      x={137.14285714285717}
      y={120}
    />
    <rect
      height={133.33333333333334}
      width={20}
      x={274.28571428571433}
      y={186.66666666666666}
    />
    <rect
      height={266.6666666666667}
      width={20}
      x={411.42857142857144}
      y={53.333333333333314}
    />
    <rect
      height={133.33333333333334}
      width={20}
      x={548.5714285714287}
      y={186.66666666666666}
    />
    <rect
      height={66.66666666666669}
      width={20}
      x={685.7142857142858}
      y={253.33333333333331}
    />
    <rect
      height={266.6666666666667}
      width={20}
      x={822.8571428571429}
      y={53.333333333333314}
    />
  </g>
  <g
    className="xaxis-sc-cSHVUG jPaNRJ"
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    style={Object {}}
    textAnchor="middle"
    transform="translate(0,320)"
  >
    <text
      className="axisName"
      style={Object {}}
      transform="translate(480, 30)"
    />
    <path
      className="domain"
      d="M0.5,0V0.5H960.5V0"
      stroke="#000"
      style={Object {}}
    />
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(137.64285714285717,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        CN
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(274.78571428571433,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        BE
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(411.92857142857144,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        TX
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(549.0714285714287,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        JD
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(686.2142857142858,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        DF
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(823.3571428571429,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        OD
      </text>
    </g>
  </g>
  <g
    className="yaxis-sc-kAzzGY lflFOU"
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    style={Object {}}
    textAnchor="end"
    transform={null}
  >
    <text
      className="axisName"
      style={Object {}}
      transform="translate(-25, 160) rotate(270)"
    />
    <path
      className="domain"
      d="M0,320.5H0.5V0.5H0"
      stroke="#000"
      style={Object {}}
    />
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,320.5)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        0
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,253.83333333333331)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        10
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,187.16666666666666)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        20
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,120.5)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        30
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0,53.833333333333314)"
    >
      <line
        stroke="#000"
        style={Object {}}
        x2={-0}
      />
      <text
        dy="0.32em"
        fill="#000"
        style={Object {}}
        x={-5}
      >
        40
      </text>
    </g>
  </g>
</svg>
`;

exports[`Storyshots ChartExample standard 1`] = `
<div
  className="sc-fjdhpX fRwgRe"
>
  <div
    className="responsive"
  >
    <div
      className="sc-gZMcBi zPohG"
    >
      <svg
        className="sc-dnqmqq hJxOZJ sc-bdVaJa jfUorQ"
        height={0}
        transform={null}
        width={0}
      >
        <rect
          className="background"
          height={0}
          width={0}
        />
        <g
          className="bargroup-sc-bZQynM dnQfxv"
          transform="translate(-10,0)"
        >
          <rect
            height={0}
            width={20}
            x={0}
            y={0}
          />
          <rect
            height={0}
            width={20}
            x={0}
            y={0}
          />
          <rect
            height={0}
            width={20}
            x={0}
            y={0}
          />
          <rect
            height={0}
            width={20}
            x={0}
            y={0}
          />
          <rect
            height={0}
            width={20}
            x={0}
            y={0}
          />
          <rect
            height={0}
            width={20}
            x={0}
            y={0}
          />
        </g>
        <g
          className="xaxis-sc-bwzfXH fjjIqd"
          fill="none"
          fontFamily="sans-serif"
          fontSize={10}
          style={Object {}}
          textAnchor="middle"
          transform="translate(0,0)"
        >
          <text
            className="axisName"
            style={Object {}}
            transform="translate(0, 30)"
          >
            Any Name
          </text>
          <path
            className="domain"
            d="M0.5,0V0.5H0.5V0"
            stroke="#000"
            style={Object {}}
          />
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              CN
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              BE
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              TX
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              JD
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              DF
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              OD
            </text>
          </g>
        </g>
        <g
          className="yaxis-sc-htpNat jpKklr"
          fill="none"
          fontFamily="sans-serif"
          fontSize={10}
          style={Object {}}
          textAnchor="end"
          transform={null}
        >
          <text
            className="axisName"
            style={Object {}}
            transform="translate(-25, 0) rotate(270)"
          >
            Any Name
          </text>
          <path
            className="domain"
            d="M0,0.5H0.5V0.5H0"
            stroke="#000"
            style={Object {}}
          />
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              0
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              10
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              20
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              30
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              40
            </text>
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="responsive"
  >
    <div
      className="sc-jTzLTM fqnsrE"
    >
      <svg
        className="sc-VigVT azQPF sc-bdVaJa jfUorQ"
        height={0}
        transform={null}
        width={0}
      >
        <rect
          className="background"
          height={0}
          width={0}
        />
        <text
          className="yAxisName"
          dy={-8}
          transform="translate(0, 0)"
        >
          Any Y Name
        </text>
        <g
          className="bargroup-sc-htoDjs eNztsa"
          transform="translate(0, -10)"
        >
          <rect
            className={null}
            height={20}
            width={0}
            x={0}
            y={0}
          />
          <rect
            className="negative"
            height={20}
            width={0}
            x={0}
            y={0}
          />
          <rect
            className={null}
            height={20}
            width={0}
            x={0}
            y={0}
          />
          <rect
            className="negative"
            height={20}
            width={0}
            x={0}
            y={0}
          />
          <rect
            className="negative"
            height={20}
            width={0}
            x={0}
            y={0}
          />
          <rect
            className={null}
            height={20}
            width={0}
            x={0}
            y={0}
          />
          <text
            alignmentBaseline="middle"
            className={null}
            dx={-5}
            dy={11}
            x={0}
            y={0}
          >
            Nordic Countries
          </text>
          <text
            alignmentBaseline="middle"
            className="negative"
            dx={5}
            dy={11}
            x={0}
            y={0}
          >
            Eastern Europe
          </text>
          <text
            alignmentBaseline="middle"
            className={null}
            dx={-5}
            dy={11}
            x={0}
            y={0}
          >
            Latin America
          </text>
          <text
            alignmentBaseline="middle"
            className="negative"
            dx={5}
            dy={11}
            x={0}
            y={0}
          >
            Asia
          </text>
          <text
            alignmentBaseline="middle"
            className="negative"
            dx={5}
            dy={11}
            x={0}
            y={0}
          >
            Middle East
          </text>
          <text
            alignmentBaseline="middle"
            className={null}
            dx={-5}
            dy={11}
            x={0}
            y={0}
          >
            Western Europe
          </text>
        </g>
        <g
          className="xaxis-sc-bwzfXH fjjIqd"
          fill="none"
          fontFamily="sans-serif"
          fontSize={10}
          style={Object {}}
          textAnchor="middle"
          transform="translate(0,0)"
        >
          <text
            className="axisName"
            style={Object {}}
            transform="translate(0, 30)"
          >
            Any X Name
          </text>
          <path
            className="domain"
            d="M0.5,0V0.5H0.5V0"
            stroke="#000"
            style={Object {}}
          />
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              -40
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              -30
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              -20
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              -10
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              0
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              10
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              20
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              30
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              40
            </text>
          </g>
        </g>
        <g
          className="yaxis-sc-htpNat jpKklr"
          fill="none"
          fontFamily="sans-serif"
          fontSize={10}
          style={Object {}}
          textAnchor="end"
          transform="translate(0, 0)"
        >
          <text
            className="axisName"
            style={Object {}}
            transform="translate(-25, 0) rotate(270)"
          />
          <path
            className="domain"
            d="M0,0.5H0.5V0.5H0"
            stroke="#000"
            style={Object {}}
          />
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            />
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            />
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            />
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            />
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            />
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="responsive"
  >
    <div
      className="sc-gqjmRU hCAXGa"
    >
      <svg
        className="sc-iwsKbI iuVdIU sc-bdVaJa jfUorQ"
        height={0}
        transform={null}
        width={0}
      >
        <rect
          className="background"
          height={0}
          width={0}
        />
        <g
          className="arealine-sc-EHOje kSzTaY"
        >
          <path
            className="line-sc-ifAKCX ckrWEf"
            d="M0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0"
          />
          <path
            className="area-sc-bxivhb fLQBcE"
            d="M0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0Z"
          />
        </g>
        <g
          className="xaxis-sc-bwzfXH fjjIqd"
          fill="none"
          fontFamily="sans-serif"
          fontSize={10}
          style={Object {}}
          textAnchor="middle"
          transform="translate(0,0)"
        >
          <text
            className="axisName"
            style={Object {}}
            transform="translate(0, 30)"
          >
            Any Name
          </text>
          <path
            className="domain"
            d="M0.5,0V0.5H0.5V0"
            stroke="#000"
            style={Object {}}
          />
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              0
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              10
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              20
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              30
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              40
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              50
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              60
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              70
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              80
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              90
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              100
            </text>
          </g>
        </g>
        <g
          className="yaxis-sc-htpNat jpKklr"
          fill="none"
          fontFamily="sans-serif"
          fontSize={10}
          style={Object {}}
          textAnchor="end"
          transform={null}
        >
          <text
            className="axisName"
            style={Object {}}
            transform="translate(-25, 0) rotate(270)"
          >
            Any Name
          </text>
          <path
            className="domain"
            d="M0,0.5H0.5V0.5H0"
            stroke="#000"
            style={Object {}}
          />
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              0
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              10
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              20
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              30
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              40
            </text>
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="responsive"
  >
    <div
      className="sc-gqjmRU hCAXGa"
    >
      <svg
        className="sc-iwsKbI iuVdIU sc-bdVaJa jfUorQ"
        height={0}
        transform={null}
        width={0}
      >
        <rect
          className="background"
          height={0}
          width={0}
        />
        <g
          className="arealine-sc-EHOje kSzTaY"
        >
          <path
            className="line-sc-ifAKCX ckrWEf"
            d="M0,0L0,0L0,0L0,0L0,0"
          />
          <path
            className="area-sc-bxivhb fLQBcE"
            d="M0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0L0,0Z"
          />
        </g>
        <g
          className="xaxis-sc-bwzfXH fjjIqd"
          fill="none"
          fontFamily="sans-serif"
          fontSize={10}
          style={Object {}}
          textAnchor="middle"
          transform="translate(0,0)"
        >
          <text
            className="axisName"
            style={Object {}}
            transform="translate(0, 30)"
          >
            Any Name
          </text>
          <path
            className="domain"
            d="M0.5,0V0.5H0.5V0"
            stroke="#000"
            style={Object {}}
          />
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              2017
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Tue 03
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Thu 05
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Sat 07
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Mon 09
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Wed 11
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Fri 13
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Jan 15
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Tue 17
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Thu 19
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Sat 21
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Mon 23
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Wed 25
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Fri 27
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Jan 29
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              Tue 31
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0.5,0)"
          >
            <line
              stroke="#000"
              style={Object {}}
              y2={0}
            />
            <text
              dy="0.71em"
              fill="#000"
              style={Object {}}
              y={8}
            >
              February
            </text>
          </g>
        </g>
        <g
          className="yaxis-sc-htpNat jpKklr"
          fill="none"
          fontFamily="sans-serif"
          fontSize={10}
          style={Object {}}
          textAnchor="end"
          transform={null}
        >
          <text
            className="axisName"
            style={Object {}}
            transform="translate(-25, 0) rotate(270)"
          >
            Any Name
          </text>
          <path
            className="domain"
            d="M0,0.5H0.5V0.5H0"
            stroke="#000"
            style={Object {}}
          />
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              0
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              20
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              40
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              60
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              80
            </text>
          </g>
          <g
            className="tick"
            opacity={1}
            style={Object {}}
            transform="translate(0,0.5)"
          >
            <line
              stroke="#000"
              style={Object {}}
              x2={-0}
            />
            <text
              dy="0.32em"
              fill="#000"
              style={Object {}}
              x={-5}
            >
              100
            </text>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Line standard 1`] = `
<svg
  className="sc-jzJRlG crNCsf"
  height={360}
  transform={null}
  width={960}
>
  <rect
    className="background"
    height={360}
    width={960}
  />
  <path
    className="line-sc-kgoBCf BlypM"
    d="M0,0L288,36L960,360"
  />
</svg>
`;

exports[`Storyshots XAxis linear scale 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <svg
      className="sc-jzJRlG crNCsf"
      height={360}
      transform={null}
      width={900}
    >
      <rect
        className="background"
        height={360}
        width={900}
      />
      <g
        className="xaxis-sc-hSdWYo eTqyUn"
        fill="none"
        fontFamily="sans-serif"
        fontSize={10}
        style={Object {}}
        textAnchor="middle"
        transform="translate(0,360)"
      >
        <text
          className="axisName"
          style={Object {}}
          transform="translate(450, 30)"
        />
        <path
          className="domain"
          d="M0.5,0V0.5H900.5V0"
          stroke="#000"
          style={Object {}}
        />
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(0.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            0
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(90.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            10
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(180.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            20
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(270.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            30
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(360.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            40
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(450.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            50
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(540.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            60
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(630.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            70
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(720.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            80
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(810.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            90
          </text>
        </g>
        <g
          className="tick"
          opacity={1}
          style={Object {}}
          transform="translate(900.5,0)"
        >
          <line
            stroke="#000"
            style={Object {}}
            y2={0}
          />
          <text
            dy="0.71em"
            fill="#000"
            style={Object {}}
            y={8}
          >
            100
          </text>
        </g>
      </g>
    </svg>
  </div>
  <a
    onClick={[Function]}
    role="button"
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }
    tabIndex="0"
  >
    Show Info
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <a
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }
      tabIndex="0"
    >
      ×
    </a>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "
              -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
              \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginTop": "50px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            XAxis
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            linear scale
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                  \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
                ",
                "fontSize": "15px",
              }
            }
          >
            create an XAxis from a linear scale
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  Styled(Component)
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      width
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span>
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            900
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      height
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span>
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            360
                          </span>
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  Styled(Component)
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      xScale
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span>
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            scale()
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      width
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span>
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            900
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      height
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span>
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            360
                          </span>
                        </span>
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  Styled(Component)
                  &gt;
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Styled(Component)
              " Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots XAxis time scale 1`] = `
<svg
  className="sc-jzJRlG crNCsf"
  height={360}
  transform={null}
  width={900}
>
  <rect
    className="background"
    height={360}
    width={900}
  />
  <g
    className="xaxis-sc-hSdWYo eTqyUn"
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    style={Object {}}
    textAnchor="middle"
    transform="translate(0,360)"
  >
    <text
      className="axisName"
      style={Object {}}
      transform="translate(450, 30)"
    />
    <path
      className="domain"
      d="M0.5,0V0.5H900.5V0"
      stroke="#000"
      style={Object {}}
    />
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(0.5,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        2017
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(58.564516129032256,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Tue 03
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(116.62903225806451,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Thu 05
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(174.69354838709677,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Sat 07
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(232.75806451612902,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Mon 09
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(290.8225806451613,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Wed 11
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(348.88709677419354,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Fri 13
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(406.9516129032258,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Jan 15
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(465.01612903225805,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Tue 17
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(523.0806451612904,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Thu 19
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(581.1451612903226,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Sat 21
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(639.2096774193549,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Mon 23
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(697.2741935483871,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Wed 25
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(755.3387096774194,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Fri 27
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(813.4032258064516,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Jan 29
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(871.4677419354839,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        Tue 31
      </text>
    </g>
    <g
      className="tick"
      opacity={1}
      style={Object {}}
      transform="translate(900.5,0)"
    >
      <line
        stroke="#000"
        style={Object {}}
        y2={0}
      />
      <text
        dy="0.71em"
        fill="#000"
        style={Object {}}
        y={8}
      >
        February
      </text>
    </g>
  </g>
</svg>
`;
